# objdet-challenge-submission

./: .gitignore  Dockerfile  README.md  node_launch.sh  requirements.txt
src/tf_object_detection/: CMakeLists.txt  package.xml
src/tf_object_detection/config/: config.yaml
src/tf_object_detection/inference_files/: frozen_inference_graph-heavy.pb  frozen_inference_graph.pb  tflite_graph.pb
src/tf_object_detection/launch/: test.launch
src/tf_object_detection/models/research/: _mask.c
src/tf_object_detection/models/research/compression/entropy_coder/: README.md
src/tf_object_detection/models/research/deeplab/: deeplab_demo.ipynb  model_test.py  train.py
src/tf_object_detection/models/research/images/: object_detection_tutorial.ipynb
src/tf_object_detection/models/research/images/data/: duckie_label_map.pbtxt
src/tf_object_detection/models/research/slim/nets/mobilenet/: mobilenet_example.ipynb
src/tf_object_detection/models/research/slim/nets/mobilenet/deeplabv3_mnv2_pascal_train_aug/: frozen_inference_graph.pb
src/tf_object_detection/scripts/: infer_tflite.py  non-ros-test.py
src/tf_object_detection/src/: tf_object_detection_node.py
src/tf_object_detection/src/object_detection_lib/: object_detection_lib.py
submission_directory/submission_conf1/: Dockerfile
